--- a/Workshop3/Workshop3_UnsupervisedLearning.ipynb
+++ b/Workshop3/Workshop3_UnsupervisedLearning.ipynb
@@ -19,23 +19,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6da4fd3c-b4f2-4f58-864e-baa3d0123138",
+   "metadata": {},
+   "source": [
+    "These notebooks can be run in two ways:\n",
+    "- On your own computer/laptop\n",
+    "- Using google colab:https://colab.research.google.com\n",
+    "\n",
+    "This is because the computers in room 222 do not have umap installed and we arent able to get around this."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "e2b0e742-5a3f-4b7c-a434-f6ae044dca47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## The below code installs umap - run it once before the rest of the notebook:\n",
+    "\n",
+    "!pip install umap-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "5f5ec7cd-03ef-4584-8971-36ef6d1565c4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset shape: (133, 15)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "\n",
+    "# If using your own computer:\n",
     "# Load the pharmaceutics dataset (update the file path as needed)\n",
-    "df = pd.read_excel(\"./Nanoparticle_braindelivery_data.xlsx\")"
+    "df = pd.read_excel(\"./Nanoparticle_braindelivery_data.xlsx\")\n",
+    "\n",
+    "# If using google colab:\n",
+    "#from google.colab import files\n",
+    "#df = files.upload()"
    ]
   },
   {
