--- a/Workshop3/Workshop3_UnsupervisedLearning.ipynb
+++ b/Workshop3/Workshop3_UnsupervisedLearning.ipynb
@@ -56,8 +56,22 @@
     "df = pd.read_excel(\"./Nanoparticle_braindelivery_data.xlsx\")\n",
     "\n",
     "# If using google colab:\n",
-    "#from google.colab import files\n",
-    "#df = files.upload()"
+    "from google.colab import files\n",
+    "upload = files.upload() ## Use the popup menu to select the file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4213f954-123f-49af-80fa-3e52d81644db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Run this if using google colab\n",
+    "import io\n",
+    "data = io.BytesIO(df[\"Nanoparticle_braindelivery_data.xlsx\"])\n",
+    "\n",
+    "df = pd.read_excel(data)"
    ]
   },
   {
