--- a/Workshop3/Workshop3_UnsupervisedLearning_dataset.ipynb
+++ b/Workshop3/Workshop3_UnsupervisedLearning_dataset.ipynb
@@ -5,7 +5,7 @@
    "id": "1983e08e-d2c5-4f64-b04a-8a62efecc08b",
    "metadata": {},
    "source": [
-    "# Workshop 3: Unsupervised Machine Learning"
+    "# Workshop 3: Unsupervised Machine Learning - for google colab"
    ]
   },
   {
@@ -27,7 +27,9 @@
     "- On your own computer/laptop\n",
     "- Using google colab:https://colab.research.google.com\n",
     "\n",
-    "This is because the computers in room 222 do not have umap installed and we arent able to get around this."
+    "This is because the computers in room 222 do not have umap installed and we arent able to get around this.\n",
+    "\n",
+    "This notebook is designed to be used on google colab. In this notebook the dataset we are working with is preloaded as a dictionary."
    ]
   },
   {
@@ -731,19 +733,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "6bbba59f-2564-4dc2-98f3-ee915c0e2e35",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "incomplete input (2400978832.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[12], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    for col in df_numeric.columns:\u001b[0m\n\u001b[0m                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import seaborn as sns\n",
     "\n",
@@ -976,19 +969,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "8f33da04-2b30-433a-a77d-cec8687792e7",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "incomplete input (3866773543.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[16], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    for col in df_scaled_pd.columns:\u001b[0m\n\u001b[0m                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for col in df_scaled_pd.columns:\n"
    ]
@@ -1182,7 +1166,7 @@
     }
    ],
    "source": [
-    "# We plot the PCA result. X_pca[:, 0] selects the first column from the array above.\n",
+    "# We plot the PCA result. pca_values[:, 0] selects the first column from the array above.\n",
     "# We could also convert the array to a pandas dataframe and plot it in the same way we have before\n",
     "sns.scatterplot(x = pca_values[:, 0], y = pca_values[:, 1])\n",
     "plt.show()"
@@ -1573,33 +1557,6 @@
    "outputs": [],
    "source": [
     "# Insert code here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0bdde2ee-6f8d-4e7d-aaca-e83cfe1de097",
-   "metadata": {},
-   "source": [
-    "### Bonus bonus task: \n",
-    "\n",
-    "There is a file named \"Example_molecule_dataset.csv\" in the github repository. This is a synthetic (not real data) dataset which contains 10 features, and one \"class\" (Which type of molecule each one is). See if you can:\n",
-    "\n",
-    "- Read in the data\n",
-    "- Normalise/scale the data\n",
-    "- Apply PCA and UMAP\n",
-    "- Apply kmeans and DBSCAN\n",
-    "\n",
-    "What can you learn about the data from this?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 158,
-   "id": "d34a1eb3-0185-4733-a639-af14d298c9fd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Insert code here"
    ]
   }
  ],
