--- a/Workshop5_coursework1/PHAY0076_Coursework1.ipynb
+++ b/Workshop5_coursework1/PHAY0076_Coursework1.ipynb
@@ -180,7 +180,7 @@
    "source": [
     "## Section 5: Summary\n",
     "\n",
-    "Question 9: Having performed your analysis of the data, you should now have a reasonable idea of the findings, limitations, and overall conclusions. Write a short (~5 sentance) summary of the results of the study, including statistical findings, and what this means for the formulations being tested - in particular, what key findings would you present to colleagues who are trying to optimise the formulation? (20% of the marks)"
+    "Question 9: Having performed your analysis of the data, you should now have a reasonable idea of the findings, limitations, and overall conclusions. Write a short (~5 sentence) summary of the results of the study, including statistical findings, and what this means for the formulations being tested - in particular, what key findings would you present to colleagues who are trying to optimise the formulation? (20% of the marks)"
    ]
   },
   {
