--- a/Workshop1/Workshop_1_Getting_Started.ipynb
+++ b/Workshop1/Workshop_1_Getting_Started.ipynb
@@ -51,7 +51,10 @@
    "id": "bfbfdec7-9489-4895-8a9b-d8558409837e",
    "metadata": {},
    "source": [
-    "To begin, the \"print\" command will print everything in the brackets after it. You can see that the text is in quotes \" \". Quotes are used to wrap text into a \"string\" which is a type of variable. Note that in the cell below, the text in the quotes has gone red - this is jupyter telling you that it is a text string rather than code .\n",
+    "Jupyter notebooks are made up of cells of text - these can be moved, created, deleted, and run to build a full notebook. In this case we have pregenerated code in the notebooks for you, and the workshops will focus on going through these notebooks which will teach you some basics of using python.\n",
+    "\n",
+    "To begin with python, the \"print\" command will print everything in the brackets after it. You can see that the text is in quotes \" \". Quotes are used to wrap text into a \"string\" which is a type of variable. Note that in the cell below, the text in the quotes has gone red - this is jupyter telling you that it is a text string rather than code .\n",
+    "\n",
     "\n",
     "You can run the cell below with the play button above, or by pressing ctrl + enter."
    ]
@@ -556,11 +559,11 @@
     "# This if statement checks if the size is below 50 nm, if so it prints the statement and then ends\n",
     "if size <= 50:\n",
     "    print(\"Nanoparticle is too small\")\n",
-    "    \n",
-    "# This is an \"else if\" statement - if the first statement is false, it will check if this one is true or not\n",
     "elif size <= 200:\n",
     "    print(\"Nanoparticle is just right\")\n",
-    "    \n",
+    "        \n",
+    "# This is an \"else if\" statement - if the first statement is false, it will check if this one is true or not\n",
+    "\n",
     "# If neither of the above statements are activated - this one will run\n",
     "else:\n",
     "    print(\"Nanoparticle is too big\")"
@@ -617,13 +620,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "id": "9d227a9f-d5b6-4715-a08f-0c2e20d45198",
    "metadata": {},
    "outputs": [],
    "source": [
     "# We make a list of drugs\n",
-    "drugs = [\"Aspirin\", \"Ibuprofen\", \"Paracetamol\"]"
+    "drugs = [\"Aspirin\", \"Ibuprofen\", \"Paracetamol\"]\n",
+    "drugs2 = [\"Aspirin\", \"Ibuprofen\", \"Paracetamol\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "3dbb5033-f481-44bb-a31a-39451434e75d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Aspirin', 'Ibuprofen', 'Paracetamol'] Aspirin\n",
+      "['Aspirin', 'Ibuprofen', 'Paracetamol'] Ibuprofen\n",
+      "['Aspirin', 'Ibuprofen', 'Paracetamol'] Paracetamol\n",
+      "['Aspirin', 'Ibuprofen', 'Paracetamol'] Aspirin\n",
+      "['Aspirin', 'Ibuprofen', 'Paracetamol'] Ibuprofen\n",
+      "['Aspirin', 'Ibuprofen', 'Paracetamol'] Paracetamol\n",
+      "['Aspirin', 'Ibuprofen', 'Paracetamol'] Aspirin\n",
+      "['Aspirin', 'Ibuprofen', 'Paracetamol'] Ibuprofen\n",
+      "['Aspirin', 'Ibuprofen', 'Paracetamol'] Paracetamol\n"
+     ]
+    }
+   ],
+   "source": [
+    "for drug in drugs:\n",
+    "    for drug2 in drugs2:\n",
+    "        print(drugs,drug2)"
    ]
   },
   {
@@ -799,12 +831,12 @@
     "\n",
     "Write a for loop that goes through the dictionary and prints out whether the drug stock is low or acceptable. You will need to access the values in the dictionary - this is done through providing two options to the for loop like this:\n",
     "\n",
-    "`for drug, level in drug inventory:`"
+    "`for drug, level in drug_inventory.items():`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "c96699c5-f20a-4321-9f4f-5ee58e8b3fe6",
    "metadata": {},
    "outputs": [],
@@ -824,9 +856,24 @@
    "execution_count": 6,
    "id": "b31a6d62-9eba-48f1-8e72-ab5bc26f0020",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Paracetamol 120\n",
+      "Ibuprofen 45\n",
+      "Amoxicillin 30\n",
+      "Metformin 75\n",
+      "Atorvastatin 20\n"
+     ]
+    }
+   ],
    "source": [
-    "## Write your for loop here"
+    "## Write your for loop here\n",
+    "\n",
+    "for drug, level in drug_inventory.items():\n",
+    "    print(drug, level)"
    ]
   },
   {
@@ -1083,20 +1130,28 @@
    "id": "88d8a523-0b3c-4bbe-9206-8eced57ecc09",
    "metadata": {},
    "source": [
+    "When producing nanoparticles, one process they can be exposed to is **nano-grinding**, where they are milled to an even size. In this process, the particle size decreases at a constant rate that is proportional to the current particle size, based on:\n",
     "\n",
-    "When producing nanoparticles, one process they can be exposed to is \"nano grinding\" where they are milled to an even size. In this process the particle size decreases at a constant rate that is proportional to their current size based on:\n",
+    "+ \\( k \\): the rate constant of degradation  \n",
+    "+ \\( S \\): the current particle size  \n",
     "\n",
-    "+ $k$: the rate constant of degredation\n",
-    "+ $S$: the current particle size\n",
+    "$\n",
+    "\\LARGE \\frac{dS}{dt} = -k * S\n",
+    "$\n",
     "\n",
-    "$\\LARGE\\frac{dS}{dt} = -k * S$\n",
+    "Because a computer cannot work with infinitely small time steps, we approximate this equation using a small time step \\( \\Delta t \\).  \n",
+    "The **change in particle size** over one time step is therefore:\n",
     "\n",
-    "Try and complete the code below to simulate the decrease in particle size over time"
+    "$\n",
+    "\\LARGE \\Delta S = -k * S * \\Delta t\n",
+    "$\n",
+    "\n",
+    "Try and complete the code below to simulate the decrease in particle size over time:\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "efab3787-fd96-4270-a51a-9f3708193439",
    "metadata": {},
    "outputs": [
@@ -1139,16 +1194,17 @@
     }
    ],
    "source": [
-    "initial_size = 500 # The initial particle size (nm)\n",
-    "k = 0.1 # The rate of degredation (1/min)\n",
-    "time_step = 1 # Time step (minutes)\n",
-    "total_time = 30 # Total time (minutes)\n",
+    "initial_size = 500  # Initial particle size (nm)\n",
+    "k = 0.1             # Degradation rate constant (1/min)\n",
+    "time_step = 1       # Time step (minutes)\n",
+    "total_time = 30     # Total simulation time (minutes)\n",
     "\n",
     "size = initial_size\n",
     "\n",
-    "for time in range(0, total_time +1):\n",
-    "    print(\"Time: \" + str(time) + \" Size: \" + str(size))\n",
-    "    #size -= #### Insert your own code here to update the size based on the equation above and the timestep"
+    "for time in range(0, total_time + 1):\n",
+    "    print(\"Time:\", time, \"Size:\", size)\n",
+    "    # Update the particle size here - the easiest way to it is to simply remove the change in size at this step from the size\n",
+    "    size = "
    ]
   },
   {
@@ -1189,6 +1245,17 @@
    "source": [
     "def loading_efficiency(drug_mass, nanoparticle_mass):\n",
     "    ## Write your function here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a48c0487-d640-4e30-be32-c936a97425ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Running the function to calculate pair 1\n",
+    "loading_efficiency(5, 50)"
    ]
   },
   {
@@ -1297,7 +1364,15 @@
    "id": "b0b0d591-0c0f-4bee-8346-268d4f2188a1",
    "metadata": {},
    "source": [
-    "## Exercise 5: $f1$ difference and $f2$ similarity factors"
+    "## Bonus Exercise: $f1$ difference and $f2$ similarity factors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c840bb92-5f70-4e76-8e08-631cd6a22daa",
+   "metadata": {},
+   "source": [
+    "### This exercise is a bonus - and I would recommend going on to sheet 2 before coming back to this if you have time"
    ]
   },
   {
@@ -1330,14 +1405,6 @@
     "formulation_A = [20, 40, 60, 75, 85, 95] # percentage dissolved from formulation A\n",
     "formulation_B = [10, 30, 55, 70, 80, 90] # percentage dissolved from formulation B"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5047903a-fb24-4401-bffc-fc9471a2e589",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
