Modify data loading method for nanoparticle data
Updated the method to load nanoparticle data from an Excel file, including a comment for Google Colab users.

--- a/Workshop2/Workshop_2_EDA.ipynb
+++ b/Workshop2/Workshop_2_EDA.ipynb
@@ -115,7 +115,8 @@
    "source": [
     "import pandas as pd   ## We load pandas and refer to it by pd. Now every time we use \"pd\" python knows we are referring to pandas\n",
     "\n",
-    "nanoparticle_data = pd.read_excel(\"./Nanoparticle_braindelivery_data.xlsx\")   ## The read_excel function lets us load an excel file into a dataframe"
+    "nanoparticle_data = pd.read_excel(\"./Nanoparticle_braindelivery_data.xlsx\",
+    "#nanoparticle_data = pd.read_excel("https://github.com/shorthouse-lab/computational_pharmaceutics/raw/refs/heads/main/Workshop2/Nanoparticle_braindelivery_data.xlsx")   ## If you are using google colab you will need to use this line of code to load the file"
    ]
   },
   {
