--- a/Workshop5_coursework1/2026/PHAY0076_Coursework1_TabletFormulation.ipynb
+++ b/Workshop5_coursework1/2026/PHAY0076_Coursework1_TabletFormulation.ipynb
@@ -117,7 +117,10 @@
     "import pandas as pd\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "\n",
+    "## For loading the file in colab - use the below command:\n",
+    "# data = pd.read_csv(\"https://raw.githubusercontent.com/shorthouse-lab/computational_pharmaceutics/refs/heads/main/Workshop5_coursework1/2026/tablet_formulation_screen_2026.csv\")"
    ]
   },
   {
